// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute fetch nba player data should return a 400 if date is missing 1`] = `
Object {
  "error": Object {
    "message": "Required parameter not supplied: date",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute fetch nba player data should return a 400 if playerID is missing 1`] = `
Object {
  "error": Object {
    "message": "Required parameter not supplied: playerID",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute fetch nba player data should return the correct player information 1`] = `
Object {
  "data": Object {
    "Assists": 9,
    "AssistsPercentage": 59.71,
    "BlockedShots": 0,
    "BlocksPercentage": 0,
    "DateTime": "2021-10-11T19:30:00",
    "Day": "2021-10-11T00:00:00",
    "DefensiveRebounds": 6,
    "DefensiveReboundsPercentage": 20.91,
    "DoubleDoubles": 0,
    "DraftKingsPosition": "PG",
    "DraftKingsSalary": 6500,
    "EffectiveFieldGoalsPercentage": 57.1,
    "FanDuelPosition": "PG",
    "FanDuelSalary": 6000,
    "FantasyDataSalary": 6500,
    "FantasyDraftPosition": null,
    "FantasyDraftSalary": null,
    "FantasyPoints": 41.1,
    "FantasyPointsDraftKings": 44,
    "FantasyPointsFanDuel": 42.1,
    "FantasyPointsFantasyDraft": 44,
    "FantasyPointsYahoo": 42.1,
    "FieldGoalsAttempted": 14,
    "FieldGoalsMade": 7,
    "FieldGoalsPercentage": 50,
    "FreeThrowsAttempted": 3,
    "FreeThrowsMade": 3,
    "FreeThrowsPercentage": 100,
    "GameID": 17944,
    "Games": 1,
    "GlobalGameID": 20017944,
    "GlobalOpponentID": 20000004,
    "GlobalTeamID": 20000002,
    "HomeOrAway": "AWAY",
    "InjuryBodyPart": null,
    "InjuryNotes": null,
    "InjuryStartDate": null,
    "InjuryStatus": null,
    "IsClosed": true,
    "IsGameOver": true,
    "LineupConfirmed": false,
    "LineupStatus": "Active",
    "Minutes": 26,
    "Name": "LaMelo Ball",
    "OffensiveRebounds": 2,
    "OffensiveReboundsPercentage": 8.62,
    "Opponent": "MIA",
    "OpponentID": 4,
    "OpponentPositionRank": 3,
    "OpponentRank": 7,
    "PersonalFouls": 4,
    "PlayerEfficiencyRating": 32.97,
    "PlayerID": 20002528,
    "PlusMinus": 10,
    "Points": 19,
    "Position": "PG",
    "Rebounds": 8,
    "Season": 2022,
    "SeasonType": 2,
    "Seconds": 29,
    "Started": 1,
    "StatID": 900479,
    "Steals": 1,
    "StealsPercentage": 1.83,
    "Team": "CHA",
    "TeamID": 2,
    "ThreePointersAttempted": 8,
    "ThreePointersMade": 2,
    "ThreePointersPercentage": 25,
    "TotalReboundsPercentage": 15.42,
    "TripleDoubles": 0,
    "TrueShootingAttempts": 15.32,
    "TrueShootingPercentage": 61.3,
    "TurnOversPercentage": 16.37,
    "Turnovers": 3,
    "TwoPointersAttempted": 6,
    "TwoPointersMade": 5,
    "TwoPointersPercentage": 83.3,
    "Updated": "2021-10-14T03:15:14",
    "UsageRatePercentage": 30.53,
    "YahooPosition": null,
    "YahooSalary": null,
    "result": "07e6616490b8000001317318070e05060208030302060809010000000013",
  },
  "jobRunID": "1",
  "result": "07e6616490b8000001317318070e05060208030302060809010000000013",
  "statusCode": 200,
}
`;
